Blobs corrected to prevent underspill on smaller screens, and footer padding was reduced for better viewing.

--- a/style.css
+++ b/style.css
@@ -1286,6 +1286,9 @@ footer {
     .testimonials__description {
         width: calc(100% - 41.6667%);
     }
+    footer {
+        padding: 32px 8px;
+    }
 }
 
 @media (max-width: 1024px) {
@@ -1388,7 +1391,7 @@ footer {
         padding: 16px 32px;
     }
     footer {
-        padding: 80px 32px;
+        padding: 40px 16px;
     }
 }
 
@@ -1605,5 +1608,8 @@ footer {
         font-size: 14px;
         text-align: center;
         line-height: 1.5;
+    }
+    footer {
+        padding: 24px 8px;
     }
 }
